--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "babel": "^6.23.0",
     "babel-jest": "^19.0.0",
     "babel-preset-es2015": "^6.24.0",
-    "jest": "^19.0.2"
+    "jest": "^19.0.2",
+    "nock": "^9.0.11"
   },
   "scripts": {
     "test": "jest --watch"
+  },
+  "dependencies": {
+    "lodash.flatmap": "^4.5.0",
+    "lodash.get": "^4.4.2",
+    "node-fetch": "^1.6.3",
+    "request": "^2.81.0"
   }
 }
