--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "colors": "^1.1.2",
+    "js-yaml": "^3.8.2",
     "lodash.flatmap": "^4.5.0",
     "lodash.get": "^4.4.2",
     "node-fetch": "^1.6.3",
