--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "nock": "^9.0.11"
   },
   "scripts": {
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "build": "babel src --out-dir lib --ignore spec.js,test.js"
   },
   "dependencies": {
+    "babel-cli": "^6.24.0",
     "colors": "^1.1.2",
     "js-yaml": "^3.8.2",
     "lodash.flatmap": "^4.5.0",
     "lodash.get": "^4.4.2",
     "node-fetch": "^1.6.3",
     "request": "^2.81.0"
+  },
+  "bin": {
+    "qpr": "node ./lib/index.js"
   }
 }
