--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qpr",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Github pull request querier",
   "main": "index.js",
   "repository": {},
@@ -31,6 +31,6 @@
     "request": "^2.81.0"
   },
   "bin": {
-    "qpr": "./dist/index.js"
+    "qpr": "dist/index.js"
   }
 }
